--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,3 +3,6 @@ Flask-CORS>=4.0.0
 pandas>=2.0.0
 requests>=2.31.0
 google-generativeai>=0.3.0
+python-dotenv>=1.0.0
+gunicorn>=21.2.0
+pymongo[srv]>=4.8.0
