Restructure for Railway + Vercel deployment
- Add backend/Dockerfile optimized for Railway (CPU-only PyTorch)
- Add railway.toml config and .env.example
- Add frontend/vercel.json and .env.example
- Update CORS to support configurable origins
- Update CSV loading to check multiple paths
- Remove old monolithic Docker setup (root Dockerfile, docker-compose, nginx, scripts)
- Remove README and obsolete files

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,3 +6,12 @@ google-generativeai>=0.3.0
 python-dotenv>=1.0.0
 gunicorn>=21.2.0
 pymongo[srv]>=4.8.0
+
+# RAG dependencies (torch installed separately as CPU-only)
+langchain>=0.1.0
+langchain-google-genai>=0.0.6
+langchain-community>=0.0.13
+langchain-huggingface>=0.0.1
+chromadb>=0.4.22
+tiktoken>=0.5.2
+sentence-transformers>=2.2.0
