Disable healthcheck to see actual startup errors

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -22,4 +22,5 @@ USER appuser
 ENV PORT=5000
 EXPOSE ${PORT}
 
-CMD gunicorn --bind 0.0.0.0:${PORT} --workers 2 --threads 4 --timeout 120 app:app
+# No healthcheck - let Railway show actual errors
+CMD gunicorn --bind 0.0.0.0:${PORT} --workers 1 --threads 2 --timeout 120 app:app
